--- a/package.json
+++ b/package.json
@@ -8,28 +8,27 @@
     "start": "next start"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.0.0",
+    "@supabase/supabase-js": "^2.53.0",
     "argon2": "^0.43.1",
-    "bcryptjs": "^2.4.3",
-    "dagre": "^0.8.5",
-    "next": "^15.4.5",
+    "cookie": "^1.0.2",
+    "depcheck": "^1.4.7",
+    "next": "^15.4.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-flow-renderer": "^10.0.0",
-    "uuid": "^9.0.0",
-    "zod": "^3.0.0"
+    "reactflow": "^11.11.4",
+    "zod": "^4.0.15"
   },
   "devDependencies": {
-    "@types/node": "^18.0.0",
-    "@types/react": "^18.0.0",
-    "@types/uuid": "^9.0.0",
-    "autoprefixer": "^10.0.0",
-    "eslint": "^8.0.0",
-    "husky": "^8.0.0",
-    "lint-staged": "^13.0.0",
-    "postcss": "^8.0.0",
-    "prettier": "^2.0.0",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5.0.0"
+    "@types/node": "^24.2.0",
+    "@types/react": "^19.1.9",
+    "@types/uuid": "^10.0.0",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^9.32.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.1.4",
+    "postcss": "^8.5.6",
+    "prettier": "^3.6.2",
+    "tailwindcss": "^4.1.11",
+    "typescript": "^5.9.2"
   }
 }
