--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@supabase/supabase-js": "^2.54.0",
     "argon2": "^0.43.1",
     "cookie": "^1.0.2",
+    "dagre": "^0.8.5",
     "depcheck": "^1.4.7",
     "elkjs": "^0.10.0",
     "next": "^15.4.6",
